[gd_scene load_steps=22 format=2]

[ext_resource path="res://Font/DungeonFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/UI/NinepatchBox.png" type="Texture" id=2]
[ext_resource path="res://Images/UI/EnemyHealthbarOver.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/EnemyHealthbarUnder.png" type="Texture" id=4]
[ext_resource path="res://Images/Characters/Enemies.png" type="Texture" id=5]
[ext_resource path="res://Scripts/CharacterScript/EnemyScript.gd" type="Script" id=6]
[ext_resource path="res://Scripts/CharacterScript/EnemyGameScript.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "Guilt",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "Hope",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "Denial",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Acceptance",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Anger",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Forgiveness",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "OdesOfThePast",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0666667 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="BattleBoxHolder" type="NinePatchRect"]
margin_left = 37.0
margin_top = -71.0
margin_right = 106.0
margin_bottom = 33.0
texture = ExtResource( 2 )
region_rect = Rect2( -0.410172, 0, 24.7529, 24.3113 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyName" type="Label" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 91.0
margin_bottom = 22.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 3 )
text = "Guilt"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="AnimatedSprite" parent="."]
position = Vector2( 35, 50 )
scale = Vector2( 4, 4 )
frames = SubResource( 16 )
animation = "OdesOfThePast"
playing = true
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
anims/Hurt = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="EnemyProgressBarUnder" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 77.0
margin_right = 62.0
margin_bottom = 117.0
max_value = 40.0
value = 40.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.839216, 0.160784, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyProgressBar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 77.0
margin_right = 62.0
margin_bottom = 117.0
value = 10.0
rounded = true
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHealthNumber" type="Label" parent="."]
margin_left = 12.0
margin_top = 88.0
margin_right = 70.0
margin_bottom = 105.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 6 )
text = "20/40 HP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
